# xai-brain-decoding-benchmark

./: Dockerfile  Makefile  README.md  pyproject.toml
data/task-MOTOR/: train_test_split.json
data/task-WM/: train_test_split.json
data/task-heat-rejection/: train_test_split.json
scripts/: attribute.py  brain-map-similarities.py  brain-map-similarities_analysis.py  faithfulness.py  faithfulness_analysis.py  fig_brain-map-similarities.py  fig_brain_map_similarities.py  fig_decoding-performance.py  fig_faithfulness.py  fig_sanity-checks.py  glm-BOLD_group-level.py  glm-BOLD_subject-level.py  glm-BOLD_trial-level.py  glm-attributions_group-level.py  glm-attributions_subject-level.py  hyperopt.py  identify-best-model-config.py  identify-best-model-configurations.py  interpret.py  meta-analysis.py  rearrange_hcp-source_to_BIDS.py  sanity-checks.py  sanity-checks_analysis.py  sfig_attribution-variance.py  sfig_brain-map-correlation-similarities.py  sfig_brain-map-similarities.py  sfig_randomized-labels-performance.py  train.py
scripts/sbatch/: hyperopt.sh  interpret.sh  train.sh
src/: __init__.py  data.py  model.py  plotting.py
